# pfc-cli

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
pfc/: main.py
pfc/commands/: cls.py  describe.py  head.py  heatmap.py  help.py  histplot.py  index.py  select.py
pfc/core/: dataset.py
pfc/shell/: parser.py  repl.py
pfc_cli.egg-info/: PKG-INFO  SOURCES.txt
venv-test/Scripts/: activate  activate.bat
