[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pfc-cli"
version = "0.1.0"
description = "Terminal-first data exploration and visualization tool for CSV files"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shivam", email = "shivamsharma22468@gmail.com" }
]
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "rich"
]

keywords = ["cli", "data-analysis", "eda", "csv", "terminal"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
pfc = "pfc.main:start"
